--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.0.1-experimental.1",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.13.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^0.0.0-experimental-3ff846d10-20230724",
+    "react-dom": "^0.0.0-experimental-3ff846d10-20230724",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "uniqolor": "^1.1.0",
     "web-vitals": "^2.1.4"
